--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 .game-area {
   display: grid;
-  grid: 40px 40px 40px / 40px 40px 40px;
+  grid: 40px 40px 40px 40px / 40px 40px 40px 40px;
   gap: 4px;
   background-color: black;
 }
