--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
-* {
-  background-color: black;
+html {
+  min-height: 100%;
+  background-color: #000000;
   color: white;
-  box-sizing: border-box;
+}
+body {
+  height: 100%;
 }
 /* Banner==================================================================================================== */
 h1 {
@@ -25,7 +28,7 @@ h1 {
 .show-main-menu {
   display: block;
   position: fixed;
-  padding: 1em;
+  padding: 2em;
   border-radius: 10px;
   z-index: 1;
   background-color: hsla(240, 53%, 40%, 0.9);
@@ -67,23 +70,46 @@ h1 {
   display: flex;
   justify-content: space-around;
   padding: 1em;
-  border: 4px solid #f73d93;
-  border-radius: 4px;
+  background-color: #c0c0c0
 }
 
 .controls > button {
   flex-basis: 40%;
+  background-color: #c0c0c0;
+  color: #ff0000;
+  border: 2px solid #7b7b7b;
 }
 
 .controls > input {
   width: 3em;
-  background-color: black;
+  background-color:#c0c0c0;
+  border: 2px solid #7b7b7b;
+  color: #0000ff;
   text-align: center;
 }
 
 .controls > label {
+  background-color: inherit;
+  color: #007b00
 }
 
 footer {
   text-align: center;
 }
+/* For medium screens ======================================================*/
+@media only screen and (min-width: 768px) {
+  body {
+    display: grid;
+    grid-template-columns: 175px auto;
+    grid-template-rows: fit-content fill fit-content;
+    grid-template-areas: 
+      "a a"
+      "b c"
+      "d d"
+  }
+
+  .banner {
+    grid-area: a;
+  }
+
+} 
