Fix layout and simplify CSS

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1 {
 }
 /* Menu ===================================================================================================== */
 #main-menu-button {
-  display:block;
+  display: block;
   position: fixed;
   z-index: 1;
   top: 1em;
@@ -28,26 +28,13 @@ h1 {
 
 .show-main-menu {
   display: block;
-  position: fixed;
-  padding: 2em;
-  border-radius: 10px;
-  z-index: 1;
-  background-color: rgb(48, 48, 156);
-  grid-template-areas: c;
-}
-
-.show-content-item {
-  display: block;
-}
-
-.content-item * {
   background-color: rgb(48, 48, 156);
 }
 
 /* Game ================================================================================================================================ */
 #game-area {
   overflow-x: scroll;
-  padding: 1em;
+  overflow-y: scroll;
 }
 
 .mine {
@@ -71,32 +58,40 @@ h1 {
 .controls {
   display: flex;
   justify-content: space-around;
+  height: fit-content;
+  gap: 1em;
   padding: 1em;
   background-color: #c0c0c0;
+}
+.controls * {
+  background-color: inherit;
+  border: 2px solid #7b7b7b;
 }
 
 .controls > button {
   flex-basis: 40%;
-  background-color: #c0c0c0;
   color: #ff0000;
-  border: 2px solid #7b7b7b;
 }
 
 .controls > input {
-  width: 3em;
-  background-color: #c0c0c0;
-  border: 2px solid #7b7b7b;
   color: #0000ff;
   text-align: center;
+  width: 4em;
 }
 
 .controls > label {
-  background-color: inherit;
   color: #007b00;
+  border: none;
 }
 
 footer {
   text-align: center;
+}
+
+/* scores */
+
+.scores {
+  display: none;
 }
 
 /* For medium screens ======================================================*/
@@ -104,58 +99,51 @@ footer {
   body {
     display: grid;
     grid-template-columns: 250px auto;
-    grid-template-rows: fit-content fill fit-content;
+    grid-template-rows: fit-content auto fit-content;
     grid-template-areas:
-      "a a"
-      "b c"
-      "d d";
+      "banner banner"
+      "misc game"
+      "foot foot";
   }
 
   .banner {
-    grid-area: a;
+    grid-area: banner;
   }
 
-  .controls {
-    grid-area: b;
-    height: 81vh;
-    align-items: flex-start;
-    gap: 1em;
-    padding: 1em;
+  .misc-container {
+    grid-area: misc;
+    display: flex;
+    flex-direction: column;
   }
 
-  .show-main-menu {
-    display:static;
-   grid-area: c;
-   top:5em;
-   left:260px;
-   padding: 1em;
-   
-  }
-
-  .controls * {
-    height: 5em;
+  .scores {
+    grid-area: misc;
+    display:block;
   }
 
   footer {
-    grid-area: d;
+    grid-area: foot;
   }
 }
+
+/* for large screens ====================================================== */
 
 @media only screen and (min-width: 992px) {
   body {
     display: grid;
-    grid-template-columns: 250px 250px auto;
-    grid-template-rows: fit-content fill fit-content;
+    grid-template-columns: 400px auto;
+    grid-template-rows: fit-content fill fill fit-content;
     grid-template-areas:
-      "a a a"
-      "b c d"
-      "e e e";
+      "banner banner"
+      "misc game"
+      "foot foot";
   }
-  
+
   #game-area {
-    grid-area: d;
+    grid-area: game;
   }
+
   footer {
-    grid-area: e;
+    grid-area: foot;
   }
-} 
+}
