--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+  
 html {
-  min-height: 100%;
+  height: 100%;
   background-color: #000000;
   color: white;
-}
-body {
-  height: 100%;
 }
 /* Banner==================================================================================================== */
 h1 {
@@ -18,6 +19,15 @@ h1 {
   right: 1.8em;
   height: 3em;
   width: 3em;
+  border-radius: 0;
+  background-color: #c0c0c0;
+  border: 2px solid #7b7b7b7;
+  box-shadow: -3px -3px grey inset, 3px 3px #e3e3e3 inset;
+}
+
+#help-button:hover {
+  box-shadow: 3px 3px grey inset, -3px -3px #e3e3e3 inset;
+  font-weight: bold;
 }
 
 .help-area {
@@ -28,20 +38,28 @@ h1 {
   display: block;
   position: fixed;
   padding: 1em;
-  top: 81.1px;
+  margin: 1em;
+  border-radius: 4px;
+  top: 99px;
   left: 0;
   right: 0;
-  background-color: rgb(48, 48, 156);
+  background-color: rgb(24, 19, 31);
 }
 
 .help-item ul {
   list-style: none;
-  display:flex;
-  justify-content: space-around;
+  display: flex;
+  justify-content: space-between;
 }
 
-a:link, a {
-color: white
+ul > li {
+  width: 30%;
+  text-align: center;
+}
+
+a:link,
+a {
+  color: white;
 }
 
 a:hover {
@@ -52,8 +70,10 @@ a:hover {
 /* Game ================================================================================================================================ */
 #game-area {
   overflow-x: scroll;
-  margin-top: 4px;
+  margin-top: 1em;
   margin-bottom: 4em;
+  display: grid;
+  gap: 4px;
 }
 
 .game-square {
@@ -77,19 +97,29 @@ a:hover {
 .controls {
   display: flex;
   justify-content: space-around;
+  align-items: stretch;
   height: fit-content;
   gap: 1em;
   padding: 1em;
-  background-color: #c0c0c0;
+  background-color: #041a09;
 }
+
 .controls * {
-  background-color: inherit;
+  background-color: #c0c0c0;
   border: 2px solid #7b7b7b;
+  padding: .4em;
+  height: 58.8px;
 }
 
 .controls > button {
   flex-basis: 40%;
-  color: #ff0000;
+  color: red;
+  box-shadow: -3px -3px grey inset, 3px 3px #e3e3e3 inset;
+}
+
+.controls > button:hover {
+  box-shadow: 3px 3px grey inset, -3px -3px #e3e3e3 inset;
+  font-weight: bold;
 }
 
 .controls > input {
@@ -100,7 +130,8 @@ a:hover {
 
 .controls > label {
   color: #007b00;
-  border: none;
+  line-height:45px;
+  text-align: center;
 }
 
 footer {
@@ -122,15 +153,14 @@ footer {
   body {
     display: grid;
     grid-template-columns: 250px auto;
-    grid-template-rows: fit-content auto auto fit-content;
+    grid-template-rows: fit-content fit-content auto fit-content;
     grid-template-areas:
       "banner banner"
       "controls game"
       "scroll-container game"
       "foot foot";
-    gap: 4px;
   }
-  
+
   #game-area {
     margin-top: 0;
   }
@@ -145,54 +175,67 @@ footer {
 
   .controls {
     grid-area: controls;
+    height: auto;
+    background-image: linear-gradient(#041a09, black);
   }
 
-  .scroll-container {          
+  .controls * {
+    height: 69px;
+  }
+
+  .scroll-container {
     grid-area: scroll-container;
     display: block;
     overflow: hidden;
-
   }
-/* thanks to Jamie Juviler's tutorial at https://blog.hubspot.com/website/scrolling-text-css */
-/* animation not for evaluation as part of project, coppied and pasted for learning purposes, soon to be reworked */
+  /* thanks to Jamie Juviler's tutorial at https://blog.hubspot.com/website/scrolling-text-css */
+  /* animation not for evaluation as part of project, coppied and pasted for learning purposes, soon to be reworked */
   .scroll-text {
     height: 100%;
-  text-align: center;
-  
-  /* animation properties */
-  -moz-transform: translateY(100%);
-  -webkit-transform: translateY(100%);
-  transform: translateY(100%);
-  
-  -moz-animation: my-animation 5s linear infinite;
-  -webkit-animation: my-animation 5s linear infinite;
-  animation: my-animation 5s linear infinite;
-}
+    text-align: center;
 
-/* for Firefox */
-@-moz-keyframes my-animation {
-  from { -moz-transform: translateY(100%); }
-  to { -moz-transform: translateY(-100%); }
-}
-
-/* for Chrome */
-@-webkit-keyframes my-animation {
-  from { -webkit-transform: translateY(100%); }
-  to { -webkit-transform: translateY(-100%); }
-}
-
-@keyframes my-animation {
-  from {
+    /* animation properties */
     -moz-transform: translateY(100%);
     -webkit-transform: translateY(100%);
     transform: translateY(100%);
+
+    -moz-animation: my-animation 5s linear infinite;
+    -webkit-animation: my-animation 5s linear infinite;
+    animation: my-animation 5s linear infinite;
   }
-  to {
-    -moz-transform: translateY(-100%);
-    -webkit-transform: translateY(-100%);
-    transform: translateY(-100%);
+
+  /* for Firefox */
+  @-moz-keyframes my-animation {
+    from {
+      -moz-transform: translateY(100%);
+    }
+    to {
+      -moz-transform: translateY(-100%);
+    }
   }
-}
+
+  /* for Chrome */
+  @-webkit-keyframes my-animation {
+    from {
+      -webkit-transform: translateY(100%);
+    }
+    to {
+      -webkit-transform: translateY(-100%);
+    }
+  }
+
+  @keyframes my-animation {
+    from {
+      -moz-transform: translateY(100%);
+      -webkit-transform: translateY(100%);
+      transform: translateY(100%);
+    }
+    to {
+      -moz-transform: translateY(-100%);
+      -webkit-transform: translateY(-100%);
+      transform: translateY(-100%);
+    }
+  }
   footer {
     grid-area: foot;
   }
