--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
   background-color: #000000;
   color: white;
 }
+
 /* Banner==================================================================================================== */
 h1 {
   text-align: center;
@@ -21,7 +22,7 @@ h1 {
   width: 3em;
   border-radius: 0;
   background-color: #c0c0c0;
-  border: 2px solid #7b7b7b7;
+  border: 2px solid #7b7b7b;
   box-shadow: -3px -3px grey inset, 3px 3px #e3e3e3 inset;
 }
 
@@ -60,6 +61,9 @@ ul > li {
 a:link,
 a {
   color: white;
+  transition-duration: 250ms;
+  transition-property: color, font-weight;
+  transition-timing-function: ease-in;
 }
 
 a:hover {
@@ -199,9 +203,9 @@ footer {
     -webkit-transform: translateY(100%);
     transform: translateY(100%);
 
-    -moz-animation: my-animation 5s linear infinite;
-    -webkit-animation: my-animation 5s linear infinite;
-    animation: my-animation 5s linear infinite;
+    -moz-animation: my-animation 10s linear infinite;
+    -webkit-animation: my-animation 10s linear infinite;
+    animation: my-animation 10s linear infinite;
   }
 
   /* for Firefox */
@@ -247,7 +251,7 @@ footer {
   body {
     display: grid;
     grid-template-columns: 250px 250px auto;
-    grid-template-rows: fit-content fill fill fit-content;
+    grid-template-rows: fit-content 80% fit-content;
     grid-template-areas:
       "banner banner banner"
       "scroll-container controls game"
