--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ h1 {
 
 .show-help {
   display: block;
+  position: absolute;
   overflow-y: scroll;
-  position: fixed;
   padding: 1em;
   margin: 1em;
   border-radius: 4px;
@@ -47,6 +47,7 @@ h1 {
   right: 0;
   background-color: rgb(24, 19, 31);
 }
+
 
 .help-item ul {
   list-style: none;
@@ -142,6 +143,8 @@ a:hover {
 footer {
   background-color: black;
   position: fixed;
+  z-index: -1;
+  margin-top: 4em;
   bottom: 0;
   width: 100%;
   text-align: center;
