Implement 2d array, long click event for flagging squares, and hard mode

--- a/style.css
+++ b/style.css
@@ -92,11 +92,15 @@ a:hover {
 }
 
 .mine {
-  background-color: red;
+  background-color: red !important;
 }
 
 .safe {
   background-color: lightgray;
+}
+
+.flagged {
+   background-color: yellow;
 }
 
 /* controls =========================================================================================================== */
